# curiouswolf

./: .env  .gitignore  Cargo.toml  README.md  build.rs  package.json  tailwind.config.js
migrations/: 20230119003323_initial.sql  20230328190541_webpush.sql
src/: api.rs  auth.rs  htmx.rs  lib.rs  main.rs  models.rs  ogp.rs  web_push.rs
src/api/: htmx.rs  mod.rs
static/: authentication.js  manifest.json  notifications.js  registration.js  service-worker.js  simple-webauthn.min.js
templates/: admin.html  base.html  inbox.html  index.html  login.html  profile.html  register.html  settings.html  sign_in.html  style.css  welcome.html
templates/elements/: nav_bar.html  notification_settings_section.html  passkey_icon.html  wolf_icon.html
templates/htmx/: banner.html  hello-world.html  question.html
